# ECSE446-Global_Illumination

./: README.md
TinyRender-Global_Illumination/: CMakeLists.txt
TinyRender-Global_Illumination/data/a5/cbox/tinyrender/: cbox_gi_high_realtime.exr  cbox_gi_high_realtimeDEBUG.exr  cbox_gi_high_realtimeDEBUG.toml  cbox_gi_low_realtime.exr  cbox_path_explicit_0_bounce.exr  cbox_path_explicit_1_bounce.exr  cbox_path_explicit_2_bounces.exr  cbox_path_explicit_4_bounces.exr  cbox_path_explicit_rr.exr  cbox_path_explicit_rr512.exr  cbox_path_explicit_rr512.toml  cbox_path_implicit.exr  cbox_path_implicit_0_bounce.exr  cbox_path_implicit_1_bounce.exr  cbox_path_implicit_2_bounces.exr
TinyRender-Global_Illumination/data/a5/cubebox/tinyrender/: cubebox_gi_realtime.exr  cubebox_path_offline.exr
TinyRender-Global_Illumination/data/a5/livingroom/tinyrender/: livingroom_path_explicit_1_bounce.exr  livingroom_path_explicit_2_bounces.exr  livingroom_path_explicit_rr.exr  livingroom_path_implicit_1_bounce.exr  livingroom_path_implicit_2_bounces.exr  livingroom_path_implicit_4_bounces.exr
TinyRender-Global_Illumination/data/a5/veach/tinyrender/: veach_mis.exr  veach_mis.toml
TinyRender-Global_Illumination/src/bsdfs/: diffuse.h  mixture.h  phong.h
TinyRender-Global_Illumination/src/core/: math.h  platform.h  renderer.cpp
TinyRender-Global_Illumination/src/integrators/: direct.h  path.h
TinyRender-Global_Illumination/src/renderpasses/: gi.h
